--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -18,11 +18,11 @@
     </div>
     <div class="contact-text">
       <div class="contact-text-one">
-        <%= image_tag 'chat-icon.png' %>
+        <%= image_tag 'contact-icon-1.png', class: 'about-icon square-icon' %>
         <p><%= t("contact.icon_text") %></p>
       </div>
       <div class="contact-text-one">
-        <%= image_tag 'grain-icon.png' %>
+        <%= image_tag 'contact-icon-2.png', class: 'about-icon square-icon' %>
         <p><%= t("contact.icon_text_two") %></p>
       </div>
     </div>
