--- a/app/views/pages/cost_of_ownership.html.erb
+++ b/app/views/pages/cost_of_ownership.html.erb
@@ -16,7 +16,7 @@
     </div>
   </div>
   <div class="ownership-second-section-wrapper">
-    <%= image_tag 'ownership-icon.png', class: 'about-icon' %>
+    <%= image_tag 'ownership-icon-1.png', class: 'about-icon' %>
     <h3 class="ownership-second-section-text text-center"><%= t("cost_of_ownership.second_section_title") %></h3>
     <p class="paragraph-text ownership-second-section-text text-center"><%= t("cost_of_ownership.second_section_text") %></p>
   </div>
