--- a/app/views/pages/distributor.html.erb
+++ b/app/views/pages/distributor.html.erb
@@ -82,7 +82,7 @@
           <% end %>
         </div>
         <div class="distributor-interested">
-          <%= image_tag 'distributor-icon.png', class: 'about-icon' %>
+          <%= image_tag 'distributor-icon-1.png', class: 'about-icon' %>
           <h3><%= t("distributor.third_section_title") %></h3>
           <p class="paragraph-text"><%= t("distributor.third_section_text") %></p>
         </div>
@@ -91,7 +91,7 @@
   </div>
   <div class="distributor-third-section-mobile">
     <%= cl_image_tag("distributor-mobile_uhqrlt.png", :quality=>"auto", class: "distributor-slant-mobile") %>
-    <%= image_tag 'distributor-icon.png', class: 'distributor-icon-mobile' %>
+    <%= image_tag 'distributor-icon-1.png', class: 'distributor-icon-mobile' %>
   </div>
   <div class="distributor-third-section-mobile-two">
     <div class="distributor-interested">
