--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="ownership-second-section-wrapper fxone-second-section-wrapper">
     <%= image_tag 'about-dots.png', class: 'fxone-dots hide-mobile' %>
-    <%= image_tag 'inks-icon-3.png', class: 'about-icon' %>
+    <%= image_tag 'fxone-icon-1.png', class: 'about-icon' %>
     <h3 class="text-center"><%= t("fxone_remote.second_section_title") %></h3>
   </div>
   <div class="fxone-third-section-wrapper">
@@ -24,91 +24,91 @@
       <div class="row justify-content-center fxone-cards">
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
-            <%= image_tag 'fxone-icon-1.png', class: 'about-icon' %>
+            <%= image_tag 'fxone-card-icon-1.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header"><%= t("fxone_remote.first_card_title") %></p>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.first_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
-            <%= image_tag 'fxone-icon-2.png', class: 'about-icon' %>
+            <%= image_tag 'fxone-card-icon-2.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header"><%= t("fxone_remote.second_card_title") %></p>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.second_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
-            <%= image_tag 'fxone-icon-3.png', class: 'about-icon' %>
+            <%= image_tag 'fxone-card-icon-3.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header"><%= t("fxone_remote.third_card_title") %></p>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.third_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
-            <%= image_tag 'fxone-icon-4.png', class: 'about-icon' %>
+            <%= image_tag 'fxone-card-icon-4.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header"><%= t("fxone_remote.fourth_card_title") %></p>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.fourth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
-            <%= image_tag 'fxone-icon-5.png', class: 'about-icon' %>
+            <%= image_tag 'fxone-card-icon-5.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header"><%= t("fxone_remote.fifth_card_title") %></p>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.fifth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
-            <%= image_tag 'fxone-icon-6.png', class: 'about-icon' %>
+            <%= image_tag 'fxone-card-icon-6.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header"><%= t("fxone_remote.sixth_card_title") %></p>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.sixth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
-            <%= image_tag 'fxone-icon-7.png', class: 'about-icon' %>
+            <%= image_tag 'fxone-card-icon-7.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header"><%= t("fxone_remote.seventh_card_title") %></p>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.seventh_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
-            <%= image_tag 'fxone-icon-8.png', class: 'about-icon' %>
+            <%= image_tag 'fxone-card-icon-8.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header"><%= t("fxone_remote.eigth_card_title") %></p>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.eigth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
-            <%= image_tag 'fxone-icon-9.png', class: 'about-icon' %>
+            <%= image_tag 'fxone-card-icon-9.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header"><%= t("fxone_remote.ninth_card_title") %></p>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.ninth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
-            <%= image_tag 'fxone-icon-10.png', class: 'about-icon' %>
+            <%= image_tag 'fxone-card-icon-10.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header"><%= t("fxone_remote.tenth_card_title") %></p>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.tenth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
-            <%= image_tag 'fxone-icon-11.png', class: 'about-icon' %>
+            <%= image_tag 'fxone-card-icon-11.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header"><%= t("fxone_remote.eleventh_card_title") %></p>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.eleventh_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
-            <%= image_tag 'fxone-icon-12.png', class: 'about-icon' %>
+            <%= image_tag 'fxone-card-icon-12.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header"><%= t("fxone_remote.twelfth_card_title") %></p>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.twelfth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
-            <%= image_tag 'fxone-icon-13.png', class: 'about-icon' %>
+            <%= image_tag 'fxone-card-icon-13.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header"><%= t("fxone_remote.thirteenth_card_title") %></p>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.thirteenth_card_text") %></p>
           </div>
@@ -119,7 +119,7 @@
   <div class="fxone-fourth-section-wrapper">
     <div class="container">
       <div class="fxone-fourth-section-header">
-        <%= image_tag 'inks-icon-3.png', class: 'about-icon m-auto' %>
+        <%= image_tag 'fxone-icon-2.png', class: 'about-icon' %>
         <h3 class="text-center"><%= t("fxone_remote.fourth_section_title") %></h3>
       </div>
       <div class="about-section fxone-section mobile-column">
@@ -189,7 +189,7 @@
     <%#= cl_image_tag("fourth-section-middle_yezkil.png", :quality=>"auto", class: "fxone-fourth-section-background") %>
     <div class="container">
       <div class="fxone-sixth-section-header">
-        <%= image_tag 'fxone-icon-14.png', class: 'about-icon m-auto fxone-icon-sixth-section' %>
+        <%= image_tag 'fxone-icon-3.png', class: 'about-icon' %>
         <h3 class="fxone-remote-sixth-section-title text-center"><%= t("fxone_remote.sixth_section_title") %></h3>
       </div>
       <div class="about-section fxone-section fxone-sixth-section-content">
@@ -262,7 +262,7 @@
     <div class="container">
       <div class="about-section">
         <div class="about-fifth-section-left mobile-center fxone-no-padding">
-          <%= image_tag 'fxone-icon-15.png', class: 'about-icon' %>
+          <%= image_tag 'fxone-icon-4.png', class: 'about-icon' %>
           <h3 class="about-fifth-section-text" style="padding-left: 16px;"><%= t("fxone_remote.seventh_section_title") %></h3>
           <p class="paragraph-text about-fifth-section-text" style="padding-left: 16px;"><%= t("fxone_remote.seventh_section_text") %></p>
           <%= cl_image_tag("fxone-remote-graphic-4_lo5sz0.png", :quality=>"auto", class: "about-graphic about-graphic-two show-mobile") %>
