--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -21,44 +21,48 @@
     <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "software-cards-little-pill show-mobile") %>
     <div class="container">
       <div class="inks-section software-section">
-        <div class="inks-first-section-left software-first-section-left">
-          <h3><%= t("software.second_section_title") %></h3>
-          <p class="paragraph-text"><%= t("software.second_section_text") %></p></p>
-          <div class="fxone-sixth-section-check">
-            <%= image_tag 'foenix-check.png', width: 20 %>
-            <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_one") %></p>
+        <div class="inks-first-section-left software-first-section-left software-check-display">
+          <div>
+            <h3><%= t("software.second_section_title") %></h3>
+            <p class="paragraph-text"><%= t("software.second_section_text") %></p></p>
           </div>
-          <div class="fxone-sixth-section-check">
-            <%= image_tag 'foenix-check.png', width: 20 %>
-            <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_two") %></p>
-          </div>
-          <div class="fxone-sixth-section-check">
-            <%= image_tag 'foenix-check.png', width: 20 %>
-            <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_three") %></p>
-          </div>
-          <div class="fxone-sixth-section-check">
-            <%= image_tag 'foenix-check.png', width: 20 %>
-            <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_four") %></p>
-          </div>
-          <div class="fxone-sixth-section-check">
-            <%= image_tag 'foenix-check.png', width: 20 %>
-            <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_five") %></p>
-          </div>
-          <div class="fxone-sixth-section-check">
-            <%= image_tag 'foenix-check.png', width: 20 %>
-            <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_six") %></p>
+          <div>
+            <div class="fxone-sixth-section-check">
+              <%= image_tag 'foenix-check.png', width: 20 %>
+              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_one") %></p>
+            </div>
+            <div class="fxone-sixth-section-check">
+              <%= image_tag 'foenix-check.png', width: 20 %>
+              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_two") %></p>
+            </div>
+            <div class="fxone-sixth-section-check">
+              <%= image_tag 'foenix-check.png', width: 20 %>
+              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_three") %></p>
+            </div>
+            <div class="fxone-sixth-section-check">
+              <%= image_tag 'foenix-check.png', width: 20 %>
+              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_four") %></p>
+            </div>
+            <div class="fxone-sixth-section-check">
+              <%= image_tag 'foenix-check.png', width: 20 %>
+              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_five") %></p>
+            </div>
+            <div class="fxone-sixth-section-check">
+              <%= image_tag 'foenix-check.png', width: 20 %>
+              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important; margin: 0;"><%= t("software.second_section_check_six") %></p>
+            </div>
           </div>
         </div>
         <div class="inks-first-section-right software-first-section-right">
           <div class="software-card-left">
             <div class="software-card">
-              <%= image_tag 'software-icon-1.png', class: 'about-icon software-card-icon' %>
+              <%= image_tag 'software-card-icon-1.png', class: 'about-icon mt-3' %>
               <div class="software-card-text-container">
                 <p><%= t("software.second_section_card_one") %></p>
               </div>
             </div>
             <div class="software-card">
-              <%= image_tag 'software-icon-3.png', class: 'about-icon software-card-icon' %>
+              <%= image_tag 'software-card-icon-3.png', class: 'about-icon mt-3' %>
               <div class="software-card-text-container">
                 <p><%= t("software.second_section_card_three") %></p>
               </div>
@@ -66,13 +70,13 @@
           </div>
           <div class="software-card-right">
             <div class="software-card no-margin-top-mobile">
-              <%= image_tag 'software-icon-2.png', class: 'about-icon software-card-icon' %>
+              <%= image_tag 'software-card-icon-2.png', class: 'about-icon mt-3' %>
               <div class="software-card-text-container">
                 <p><%= t("software.second_section_card_two") %></p>
               </div>
             </div>
             <div class="software-card">
-              <%= image_tag 'software-icon-4.png', class: 'about-icon software-card-icon' %>
+              <%= image_tag 'software-card-icon-4.png', class: 'about-icon mt-3' %>
               <div class="software-card-text-container">
                 <p><%= t("software.second_section_card_four") %></p>
               </div>
@@ -143,7 +147,7 @@
     <%= image_tag 'about-dots.png', class: 'software-dots hide-mobile' %>
     <div class="container" style="position: relative;">
       <div class="software-fourth-section-text">
-        <%= image_tag 'software-icon-5.png', class: 'about-icon m-auto' %>
+        <%= image_tag 'software-icon-1.png', class: 'about-icon' %>
         <h3 class="text-center"><%= t("software.fourth_section_title_one") %></h3>
         <p class="paragraph-text text-center"><%= t("software.fourth_section_text_one") %></p>
       </div>
@@ -152,7 +156,7 @@
         <%= cl_image_tag("software-graphic-5_jro1yk.png", :quality=>"auto", class: "software-fourth-section-graphics") %>
       </div>
       <div class="software-fourth-section-text">
-        <%= image_tag 'software-icon-6.png', class: 'about-icon m-auto' %>
+        <%= image_tag 'software-icon-2.png', class: 'about-icon' %>
         <h3 class="text-center"><%= t("software.fourth_section_title_two") %></h3>
         <p class="paragraph-text text-center"><%= t("software.fourth_section_text_two") %></p>
       </div>
@@ -162,7 +166,7 @@
         <%= cl_image_tag("grey-dots_oh4kpb.png", :quality=>"auto", class: "software-grey-dots hide-mobile") %>
       </div>
       <div class="software-fourth-section-text">
-        <%= image_tag 'software-icon-7.png', class: 'about-icon m-auto' %>
+        <%= image_tag 'software-icon-3.png', class: 'about-icon' %>
         <h3 class="text-center"><%= t("software.fourth_section_title_three") %></h3>
         <p class="paragraph-text text-center"><%= t("software.fourth_section_text_three") %></p>
       </div>
@@ -210,7 +214,7 @@
   <div class="software-fifth-section-wrapper">
     <div class="container">
       <div class="software-fourth-section-text no-padding-mobile">
-        <%= image_tag 'software-icon-8.png', class: 'about-icon m-auto' %>
+        <%= image_tag 'software-icon-4.png', class: 'about-icon' %>
         <h3 class="text-center"><%= t("software.fifth_section_title_one") %></h3>
         <p class="paragraph-text text-center"><%= t("software.fifth_section_sub_title") %></p>
         <p class="paragraph-text text-center mobile-margin-bottom"><%= t("software.fifth_section_text_one") %></p>
