--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -112,10 +112,27 @@
 }
 
 .about-icon {
-  width: 70px;
+  width: 75px;
+  box-shadow: 0px 2px 7px rgba(0,0,0,0.1);
+  border-radius: 50%;
+  margin-bottom: 10px;
+  position: relative;
+  z-index: 5;
   @include for-phone-only {
-    width: 120px;
+    width: 90px;
   }
+}
+
+.square-icon {
+  width: 60px !important;
+  border-radius: 10px !important;
+  margin: 0 !important;
+}
+
+.square-card-icon {
+  width: 60px !important;
+  border-radius: 5px !important;
+  margin: 16px !important;
 }
 
 .body-text {
