--- a/app/assets/stylesheets/pages/_fxone_remote.scss
+++ b/app/assets/stylesheets/pages/_fxone_remote.scss
@@ -104,8 +104,8 @@
 
 .fxone-card {
   background: #FFF;
-  border: 1px solid #000;
   border-radius: 10px;
+  border: 3px solid #fafafa;
   // padding: 0 16px 16px 0;
   position: relative;
   z-index: 4;
