--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -32,7 +32,7 @@
   <div class="about-third-section-wrapper">
     <div class="container">
       <div class="about-third-section-text">
-        <%= image_tag 'about-icon-2.png', class: 'about-icon m-auto' %>
+        <%= image_tag 'about-icon-2.png', class: 'about-icon' %>
         <h3 class="text-center"><%= t("about.third_section_title") %></h3>
         <p class="paragraph-text text-center"><%= t("about.third_section_text") %></p>
       </div>
