--- a/app/views/pages/inks_and_consumables.html.erb
+++ b/app/views/pages/inks_and_consumables.html.erb
@@ -18,18 +18,18 @@
     <div class="container">
       <div class="inks-section">
         <div class="inks-first-section-left">
-          <div class="inks-card" style="margin: 0 0 0 auto">
-            <%= image_tag 'inks-icon-1.png', class: 'about-icon' %>
-            <p class="inks-card-header"><%= t("inks_and_consumables.first_card_title") %></p>
-            <p class="paragraph-text inks-card-text"><%= t("inks_and_consumables.first_card_text") %></p>
+          <div class="inks-card pb-3" style="margin: 0 0 0 auto">
+            <%= image_tag 'inks-card-icon-1.png', class: 'about-icon square-card-icon' %>
+            <p class="inks-card-header px-3"><%= t("inks_and_consumables.first_card_title") %></p>
+            <p class="paragraph-text inks-card-text px-3"><%= t("inks_and_consumables.first_card_text") %></p>
           </div>
         </div>
         <div class="inks-first-section-right">
           <%= image_tag 'about-dots.png', class: 'inks-dots hide-mobile' %>
-          <div class="inks-card" style="margin: 0 auto 0 0">
-            <%= image_tag 'inks-icon-2.png', class: 'about-icon' %>
-            <p class="inks-card-header"><%= t("inks_and_consumables.second_card_title") %></p>
-            <p class="paragraph-text inks-card-text"><%= t("inks_and_consumables.second_card_text") %></p>
+          <div class="inks-card pb-3" style="margin: 0 auto 0 0">
+            <%= image_tag 'inks-card-icon-2.png', class: 'about-icon square-card-icon' %>
+            <p class="inks-card-header px-3"><%= t("inks_and_consumables.second_card_title") %></p>
+            <p class="paragraph-text inks-card-text px-3"><%= t("inks_and_consumables.second_card_text") %></p>
           </div>
         </div>
       </div>
@@ -44,7 +44,7 @@
           <%= cl_image_tag("inks_pipe_mmpdgo.png", :quality=>"auto", class: "about-graphic about-graphic-two inks-pipes") %>
         </div>
         <div class="inks-first-section-right mobile-center">
-          <%= image_tag 'inks-icon-3.png', class: 'about-icon' %>
+          <%= image_tag 'inks-icon-1.png', class: 'about-icon' %>
           <h3 class="inks-fifth-section-text mobile-margin-bottom"><%= t("inks_and_consumables.third_section_text") %></h3>
         </div>
       </div>
