--- a/app/assets/stylesheets/pages/_fxone_remote.scss
+++ b/app/assets/stylesheets/pages/_fxone_remote.scss
@@ -247,6 +247,11 @@
   z-index: 3;
 }
 
+.embed-player {
+  width: 100%;
+  height: 100%;
+}
+
 .responsive-header {
   @include for-small-devices-down {
     font-size: 28px;
