--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -274,6 +274,7 @@
       </div>
       <div class="fxone-seventh-section-video-container">
         <div class="fxone-seventh-section-video">
+          <iframe class="embed-player" src="https://www.youtube-nocookie.com/embed/oMW-QEs1zmc?controls=0?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
