--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,80 +2,25 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap");
 
 // Define fonts for body and headers
-$body-font: "Manrope VF", Manrope, "sans-serif";
-$headers-font: "Manrope VF", Manrope, "sans-serif";
+$body-font: "Open Sans", "Helvetica", "sans-serif";
+$headers-font: "Raleway", "Helvetica", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
-
+// @font-face {
+//   font-family: "Font Name";
+//   src: font-url('FontFile.eot');
+//   src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
+//        font-url('FontFile.woff') format('woff'),
+//        font-url('FontFile.ttf') format('truetype')
+// }
 // $my-font: "Font Name";
 
 
-
-@charset "UTF-8";
-@font-face {
-  font-family: "Manrope VF";
-  src: url("/fonts/variable/ManropeGX.ttf") format("truetype-variations");
-  font-style: normal;
-  font-weight: 200 800; }
-
-@font-face {
-  font-family: "Manrope";
-  src: url("/fonts/web/Manrope-ExtraBold.woff2") format("woff2"),
-  url("/fonts/ttf/Manrope-ExtraBold.ttf") format("truetype");
-  font-style: normal;
-  font-weight: 800; }
-@font-face {
-  font-family: "Manrope";
-  src: url("/fonts/web/Manrope-Bold.woff2") format("woff2"),
-  url("/fonts/ttf/Manrope-Bold.ttf") format("truetype");
-  font-style: normal;
-  font-weight: 700; }
-@font-face {
-  font-family: "Manrope";
-  src: url("/fonts/web/Manrope-SemiBold.woff2") format("woff2"),
-  url("/fonts/ttf/Manrope-SemiBold.ttf") format("truetype");
-  font-style: normal;
-  font-weight: 600; }
-@font-face {
-  font-family: "Manrope";
-  src: url("/fonts/web/Manrope-Medium.woff2") format("woff2"),
-  url("/fonts/ttf/Manrope-Medium.ttf") format("truetype");
-  font-style: normal;
-  font-weight: 500; }
-@font-face {
-  font-family: "Manrope";
-  src: url("/fonts/web/Manrope-Regular.woff2") format("woff2"),
-  url("/fonts/ttf/Manrope-Regular.ttf") format("truetype");
-  font-style: normal;
-  font-weight: 400; }
-@font-face {
-  font-family: "Manrope";
-  src: url("/fonts/web/Manrope-Light.woff2") format("woff2"),
-  url("/fonts/ttf/Manrope-Light.ttf") format("truetype");
-  font-style: normal;
-  font-weight: 300; }
-@font-face {
-  font-family: "Manrope";
-  src: url("/fonts/web/Manrope-ExtraLight.woff2") format("woff2"),
-  url("/fonts/ttf/Manrope-ExtraLight.ttf") format("truetype");
-  font-style: normal;
-  font-weight: 200; }
-body, html {
-  font-family: 'Manrope VF', Manrope, sans-serif;
-  font-weight: 500;
-  font-variation-settings: 'wght' 500;
-  font-variation-ligatures: normal;
-  font-feature-settings:'calt', 'liga'; }
-*,*:before,*:after {
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  font-smoothing: antialiased; }
-
 h1,h2,h3,p {
-  font-family: 'Manrope VF', Manrope, sans-serif;
-  font-weight: 800;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
   font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
 }
+
