added printer mimi menu

--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -2,6 +2,16 @@
   overflow-x: hidden;
 }
 
+.about-first-section-container {
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+.about-first-section-text-container {
+  margin: 0 auto;
+  font-size: 50px;
+}
+
 .about-first-section-wrapper {
   background: linear-gradient(#EBEFF6, #F6F7FA);
   padding-bottom: 200px;
