--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,29 +1,31 @@
 <div class="contact">
   <%= cl_image_tag("inks_big_pill_dqob2a.png", class: "contact-pill") %>
-  <h1><%= t('contact.contact_title') %></h1>
-  <p><%= t("contact.contact_title_description")%></p>
-  <div class="contact_details">
-    <div class="contact-form">
-      <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="/create_contact" method="post">
-          <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-          <input type="text" name="name" id="full-name" placeholder="<%= t('contact.form_name') %>" required="">
-          <input type="email" name="email" id="email-address" placeholder="<%= t('contact.form_email') %>" required="">
-          <input type="integer" name="phone" id="phone" placeholder="<%= t('contact.form_phone') %>" required="">
-          <input type="text" name="company" id="company" placeholder="<%= t('contact.form_company') %>" required="">
-          <input type="text" name="country" id="country" placeholder="<%= t('contact.form_country') %>" required="">
-          <textarea rows="5" name="message" id="message" placeholder="<%= t('contact.form_message') %>" required=""></textarea>
-          <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
-        <input type="submit" value="Submit">
-      </form>
-    </div>
-    <div class="contact-text">
-      <div class="contact-text-one">
-        <%= image_tag 'contact-icon-1.png', class: 'about-icon square-icon' %>
-        <p><%= t("contact.icon_text") %></p>
+  <div class="container">
+    <h1 class="text-center"><%= t('contact.contact_title') %></h1>
+    <p class="text-center"><%= t("contact.contact_title_description")%></p>
+    <div class="contact_details">
+      <div class="contact-form">
+        <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="/create_contact" method="post">
+            <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+            <input type="text" name="name" id="full-name" placeholder="<%= t('contact.form_name') %>" required="">
+            <input type="email" name="email" id="email-address" placeholder="<%= t('contact.form_email') %>" required="">
+            <input type="integer" name="phone" id="phone" placeholder="<%= t('contact.form_phone') %>" required="">
+            <input type="text" name="company" id="company" placeholder="<%= t('contact.form_company') %>" required="">
+            <input type="text" name="country" id="country" placeholder="<%= t('contact.form_country') %>" required="">
+            <textarea rows="5" name="message" id="message" placeholder="<%= t('contact.form_message') %>" required=""></textarea>
+            <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+          <input type="submit" value="Submit">
+        </form>
       </div>
-      <div class="contact-text-one">
-        <%= image_tag 'contact-icon-2.png', class: 'about-icon square-icon' %>
-        <p><%= t("contact.icon_text_two") %></p>
+      <div class="contact-text">
+        <div class="contact-text-one">
+          <%= image_tag 'contact-icon-1.png', class: 'about-icon square-icon' %>
+          <p><%= t("contact.icon_text") %></p>
+        </div>
+        <div class="contact-text-one">
+          <%= image_tag 'contact-icon-2.png', class: 'about-icon square-icon' %>
+          <p><%= t("contact.icon_text_two") %></p>
+        </div>
       </div>
     </div>
   </div>
