--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -38,6 +38,7 @@
   width: 100%;
   height: 100%;
   padding-top: 40px;
+  position: relative;
   z-index: 2;
 
   @include for-medium-devices-down {
