--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,14 +1,11 @@
 <div class="about-wrapper">
   <div class="about-first-section-wrapper">
-    <div class="container">
-      <div class="nav-spacer"></div>
-      <div class="about-section about-first-section">
-        <div class="about-first-section-left">
-          <h1 class="about-first-section-text"><%= t("about.first_section_text") %></h1>
-        </div>
-        <div class="about-first-section-right no-padding-mobile">
-          <%= cl_image_tag("about-graphic_avvw6d.png", :quality=>"auto", class: "about-graphic") %>
-        </div>
+    <div class="about-section about-first-section about-first-section-container">
+      <div class="about-first-section-left ">
+        <h1 class="about-first-section-text about-first-section-text-container"><%= t("about.first_section_text") %></h1>
+      </div>
+      <div class="about-first-section-right no-padding-mobile">
+        <%= cl_image_tag("about-graphic_avvw6d.png", :quality=>"auto", class: "about-graphic") %>
       </div>
     </div>
   </div>
