--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,18 @@
       </a>
       <div class="dropdown-menu" aria-labelledby="productsDropdown">
         <ul class="dropdown-menu-ul">
-          <li><%= image_tag 'icon-1.png' %><%= link_to t("navbar.printers"), root_path %></li>
+          <li class="printers-menu">
+            <span><%= image_tag 'icon-1.png' %><%= link_to t("navbar.printers"), root_path %></span>
+            <%= link_to fxone_standard_path, class: 'printers-text-container mt-1' do %>
+              <span class="printers-text"><%= t("navbar.printer_one") %></span><i class="fas fa-angle-right"></i>
+            <% end %>
+            <%= link_to fxone_remote_path, class: 'printers-text-container' do %>
+              <span class="printers-text"><%= t("navbar.printer_two") %></span><i class="fas fa-angle-right"></i>
+            <% end %>
+            <%= link_to fxone_plus_path, class: 'printers-text-container' do %>
+              <span class="printers-text"><%= t("navbar.printer_three") %></span><i class="fas fa-angle-right"></i>
+            <% end %>
+          </li>
           <li><%= image_tag 'icon-2.png' %><%= link_to t("navbar.software"), software_path %></li>
           <li><%= image_tag 'icon-3.png' %><%= link_to t("navbar.inks"), inks_and_consumables_path %></li>
         </ul>
