--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -186,12 +186,12 @@
           <div class="about-fifth-section-left mobile-center">
             <h3 style="padding-left: 16px;"><%= t("software.fourth_section_title_five") %></h3>
             <p class="paragraph-text about-fifth-section-text" style="padding-left: 16px;"><%= t("software.fourth_section_text_five") %></p>
-            <%= link_to '#', class: 'btn software-button' do %>
-              <div class="d-flex align-items-center">
-                <p><%= t("software.button" ) %></p>
+            <%#= link_to '#', class: 'btn software-button' do %>
+             <!--  <div class="d-flex align-items-center">
+                <p><%#= t("software.button" ) %></p>
                 <i class="fas fa-arrow-right"></i>
-              </div>
-            <% end %>
+              </div> -->
+            <%# end %>
           </div>
           <div class="about-fifth-section-right no-padding-mobile">
             <%= cl_image_tag("software-graphic-9_geqo96.png", :quality=>"auto", class: "about-graphic about-graphic-two mobile-margin-left") %>
