data aos in on printer pages etc

--- a/app/assets/stylesheets/pages/_fxone_remote.scss
+++ b/app/assets/stylesheets/pages/_fxone_remote.scss
@@ -192,6 +192,7 @@
 .fxone-sixth-section-content {
   align-items: flex-start;
   margin: auto;
+  margin-top: 40px;
   width: 80%;
   @include for-large-devices-down {
     width: 90%;
