--- a/app/views/pages/distributor.html.erb
+++ b/app/views/pages/distributor.html.erb
@@ -81,7 +81,7 @@
             <%= f.button :button, 'Submit', type: :submit,  class: "contact-form-button" %>
           <% end %>
         </div>
-        <div class="distributor-interested">
+        <div class="distributor-interested" data-aos="fade-up" data-aos-duration="2000">
           <%= image_tag 'distributor-icon-1.png', class: 'about-icon' %>
           <h3><%= t("distributor.third_section_title") %></h3>
           <p class="paragraph-text"><%= t("distributor.third_section_text") %></p>
